tests/correct/evaluateLeftToRight.tpc
int main(void) {
   if(1 || (1/0)){
   	print('1');
   }
   if(0 || 0){
   	print('0');
   }
   if(1 && 1){
   	print('1');
   }
   if(0 && (1/0)){
   	print('0');
   }
   return 0;
}
