tests/error/tooManyArguments.tpc
int multiply(int a, int b){
	return a * b;
}

int main(void){
	return multiply(4,5,6);
}